rag-assistant/k8s/fastapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rag-fastapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rag-fastapi
  template:
    metadata:
      labels:
        app: rag-fastapi
    spec:
      containers:
      - name: fastapi
        image: amithachar/rag-assistant:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 5
