rag-assistant/k8s/qwen-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qwen-llm
  labels:
    app: qwen-llm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qwen-llm
  template:
    metadata:
      labels:
        app: qwen-llm
    spec:
      containers:
      - name: qwen
        image: vllm/vllm-openai:latest

        args:
          - "--model"
          - "Qwen/Qwen2.5-3B-Instruct"
          - "--host"
          - "0.0.0.0"
          - "--port"
          - "8000"

        ports:
          - containerPort: 8000

        resources:
          requests:
            cpu: "4"
            memory: "8Gi"
          limits:
            cpu: "8"
            memory: "16Gi"

        volumeMounts:
          - name: hf-cache
            mountPath: /root/.cache/huggingface

      volumes:
        - name: hf-cache
          emptyDir: {}
