rag-assistant/k8s/fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
spec:
  selector:
    app: rag-fastapi
  ports:
    - port: 8000
      targetPort: 8000
